changed alignment of elements on bookings#new_donation page + fixed alignment of uploaded images

--- a/app/assets/stylesheets/components/_card-item.scss
+++ b/app/assets/stylesheets/components/_card-item.scss
@@ -38,8 +38,25 @@
   border: 3px solid black;
 }
 
-.cards li {
+.card-booking {
+  margin: 20px 50px 20px 50px;
+  overflow: hidden;
+  // height: 300px;
+  background: white;
+  border: 3px solid black;
+  // flex-grow: 1;
+  padding: 20px 20px;
+}
+
+.card-booking li {
   list-style: none;
+}
+
+.booking-image {
+  height: 250px;
+  width: 200px;
+  background-size: cover;
+  margin: 0 10px;
 }
 
 // .user-profile-card {
